          installed, instead of letting perlbrew handle it (closes #50)
        - prereq 'version' added to correctly get version info from pre 5.10
          (fixes #51)
        - renamed --version|-v to --install|-i
        - added --notest|-N, allows install/remove without running exec()
          (closes #49)
        - added --setup|-s, displays Windows and Unix test platform setup guide

1.03_03 2016-03-29
        - --revdep, auto-testing of CPAN down-river modules working very well
          (work on #39)
        - added t/dev-1xx tests, need perlbrew/berrybrew installed to run. Set
          BBDEV_TESTING environment variable to run these tests (these tests
          can take a very long time to process, and currently, may be
          unreliable)
        - added Archive::Extract prereq for BBDEV_TESTING
        - fixed bug where --version wasn't doing anything
        - fixed bug on Windows where instance_remove() was removing the
          currently in-use perl instance
        - if an invalid arg is sent in, we now print help screen and exit
          (closes #45)
        - fix bug in results(), where the regex wasn't capturing properly on
          Windows
        - added blurb in SYNOPSIS about the importance of having a central
          cpanm (closes #44)
        - corrected a whole bunch of inconsistencies between win/nix throughout
          the dev test writing
        - we now re-check brew_info after an install, so we don't exit
          prematurely thinking no perls are installed, even after a --new 1
          (closes #46)
        - had to change the DATA section in the plugins to one cmd per line,
          due to Windows not properly able to manage PATH env var on each exec
          run. The actual command to perform the tests *must* be the last line
          executed
        - added BrewExec::using(), sends back the exact version we're using, so
          remove_instance() does the right thing on Windows (fixes #47)